# rust_file_hosting_server

./: .gitignore  Cargo.toml  Dockerfile  README.md  init.sh
client_dir/: test2.txt
publicFiles/: serverFile.txt
server_privateFiles/pranay/: something.txt
server_publicFiles/: aSErVerb.txt
src/: client.rs  main.rs  server.rs
users/: users.txt
