[package]
name = "Rust_File_Hosting_Server"
version = "0.1.0"
edition = "2021"
default-run="server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
